项目优化 - 配置反向代理

--- a/docs/01-项目准备.md
+++ b/docs/01-项目准备.md
@@ -1,7 +1,25 @@
+**项目介绍：**「极客园」对标`CSDN`、`博客园`等竞品，致力成为更加贴近年轻 IT 从业者（学员）的科技资讯类应用 ，产品关键词：IT、极客、活力、科技、技术分享、前沿动态、内容社交 ，用户特点：年轻有活力，对IT领域前言科技信息充满探索欲和学习热情
+
+**负责模块：** 短信登录、退出功能 ， token的拦截与过期处理， 个人中心 ，即时通讯（小智同学）频道管理 文章搜索  文章展示 评论与回复
+
+**主要职责：**
+
++ 基于 react + hooks + typescript + antd-mobile 环境开发项目
++ 使用拦截器处理用户token过期以及刷新token，自定义通用组件拦截未登录用户
++ 使用websocket完成小智同学功能
+
++ 使用localStorage以及redux完成频道管理模块
+
++ 负责文章搜索模块，使用ahooks库完成函数防抖，优化性能
+
++ 封装KeepAlive， PrivateRouter组件，实现首页的缓存，记录访问的位置。
+
+
+
 # 极客园H5项目【项目准备】
 
 - 资料
-  - 接口文档：http://toutiao.itheima.net/
+  - 接口文档：http://geek.itheima.net/
 
 ## 项目准备-项目介绍
 
@@ -22,7 +40,7 @@
 - 技术栈：
   - 项目搭建：React 官方脚手架 `create-react-app`
   - react hooks
-  - 状态管理：redux
+  - 状态管理：redux 、 redux-thunk
   - UI 组件库：`antd-mobile`
   - ajax请求库：`axios`
   - 路由：`react-router-dom` 以及 `history`
@@ -38,8 +56,8 @@
 **目标**：能够基于脚手架搭建支持TypeScript的项目
 **步骤**：
 
-1. 使用 React CLI 搭建项目：`npx create-react-app geek-h5-sh88 --template typescript`
-2. 进入项目根目录：`cd geek-h5-sh88`
+1. 使用 React CLI 搭建项目：`npx create-react-app geek-h5-sh92 --template typescript`
+2. 进入项目根目录：`cd geek-h5-sh92`
 3. 启动项目：`yarn start`
 4. 调整项目目录结构：
 
@@ -68,20 +86,28 @@ yarn add sass
 修改`src/index.tsx` 中：
 
 ```js
+import React from 'react'
 import ReactDOM from 'react-dom'
 import './index.scss'
 import App from './App'
 
-ReactDOM.render(<App />, document.getElementById('root'))
+ReactDOM.render(
+  <React.StrictMode>
+    <App />
+  </React.StrictMode>,
+  document.getElementById('root')
+)
+
 ```
 
 修改`src/index.scss` 中：
 
 ```scss
-html,
-body {
+* {
   margin: 0;
   padding: 0;
+  list-style: none;
+  box-sizing: border-box;
 }
 
 html,
@@ -90,11 +116,6 @@ body,
   height: 100%;
 }
 
-p,
-h2,
-h3 {
-  margin: 0;
-}
 ```
 
 修改`src/App.tsx` 中：
@@ -211,7 +232,16 @@ App.tsx 中：
 ```js
 import { Redirect } from 'react-router-dom'
 
-<Route exact path="/" render={() => <Redirect to="/home" />} />
+{/* 如果当前url是/ 跳转到 /home */}
+<Redirect exact from="/" to="/home"></Redirect>
+
+
+
+<Route
+  exact
+  path="/"
+  render={() => <Redirect to="/home"></Redirect>}
+></Route>
 ```
 
 **总结**：
@@ -229,7 +259,7 @@ import { Redirect } from 'react-router-dom'
 **目标**：能够使用 antd-mobile 的 Button 组件渲染按钮
 **步骤**：
 
-1. 安装 antd 组件库：`yarn add antd-mobile@next`
+1. 安装 antd 组件库：`yarn add antd-mobile`
 2. 导入 Button 组件
 3. 在 Login 页面渲染 Button 组件
 
@@ -247,7 +277,7 @@ const Login = () => (
 )
 ```
 
-## 项目准备-原生CSS变量
+## 项目准备-原生CSS变量  
 
 **目标**：能够使用原始CSS变量
 **内容**：
@@ -441,7 +471,7 @@ VSCode 会自动读取 `tsconfig.json` 中的配置，让 vscode 知道 @ 就是
 ## 项目准备-移动端适配
 
 **目标**：能跟通过配置实现自动适配移动端项目
-**分析说明**：
+**分析说明**： 
 
 适配概述
 
@@ -465,7 +495,7 @@ VSCode 会自动读取 `tsconfig.json` 中的配置，让 vscode 知道 @ 就是
 
 **核心代码**：
 
-/craco.config.js 中：
+/craco.config.js 中：  creact-react-app 5.0之前初始化的项目应该这样配置
 
 ```js
 const pxToViewport = require('postcss-px-to-viewport')
@@ -486,6 +516,42 @@ module.exports = {
 }
 ```
 
+ creact-react-app升级后，使用postcss8的配置
+
+```ts
+const path = require('path')
+const pxToViewport = require('postcss-px-to-viewport')
+const vw = pxToViewport({
+  // 视口宽度，一般就是 375（ 设计稿一般采用二倍稿，宽度为 375 ）
+  viewportWidth: 375
+})
+module.exports = {
+  // webpack 配置
+  webpack: {
+    // 配置别名
+    alias: {
+      // 约定：使用 @ 表示 src 文件所在路径
+      '@': path.resolve(__dirname, 'src'),
+      '@scss': path.resolve(__dirname, 'src', 'assets', 'styles')
+    }
+  },
+  style: {
+    postcss: {
+      mode: 'extends',
+      loaderOptions: {
+        postcssOptions: {
+          indent: 'postcss',
+          plugins: [vw]
+        }
+      }
+    }
+  }
+}
+
+```
+
+
+
 ## 项目准备-移动端 1px 像素边框
 
 - [参考 antd-mobile 的实现](https://github.com/ant-design/ant-design-mobile/blob/v2/components/style/mixins/hairline.less)
@@ -495,7 +561,7 @@ module.exports = {
 
 ![image-20211123172550252](images/image-20211123172550252.png)
 
-**分析说明**：
+**分析说明**
 
 - 实现原理：**伪元素 + transform 缩放**
   - 伪元素`::after`或`::before`独立于当前元素，可以单独对其缩放而不影响元素本身的缩放
@@ -526,13 +592,14 @@ module.exports = {
 
   // 在类中使用
   .a {
-    @include hairline(all, #f0f0f0);
+    @include hairline(all);
   }
 
 */
 @mixin hairline($direction, $color: #000, $radius: 0) {
   position: relative;
   @if $direction == top {
+    // pc
     border-top: 1px solid $color;
 
     // min-resolution 用来检测设备的最小像素密度
@@ -674,7 +741,7 @@ module.exports = {
 + 使用说明
 
 ```scss
-@import '~@scss/hairline.scss';
+@import '@scss/hairline.scss';
 
 // 添加边框
 @include hairline(all, #000);
@@ -739,30 +806,33 @@ module.exports = {
 components/Icon/index.tsx 中：
 
 ```tsx
-import classnames from 'classnames'
-
-// 组件 props 的类型
+import classNames from 'classnames'
 type Props = {
-  // icon 的类型
   type: string
-  // icon 的自定义样式
-  className?: string
-  // 点击事件
   onClick?: () => void
+  className?: string
 }
 
-const Icon = ({ type, className, onClick }: Props) => {
+export default function Icon(props: Props) {
   return (
     <svg
-      className={classnames('icon', className)}
+      className={classNames('icon', props.className)}
       aria-hidden="true"
-      onClick={onClick}
+      onClick={props.onClick}
     >
-      <use xlinkHref={`#${type}`}></use>
+      <use xlinkHref={`#${props.type}`}></use>
     </svg>
   )
 }
 
-export default Icon
+```
+
+
+
+**注意：**封装完了icon图标，一定要记得修改引入的script文件
+
+```html
+<!-- 字体图标地址： -->
+<script src="//at.alicdn.com/t/font_2503709_f4q9dl3hktl.js"></script>
 ```
 
